added room no in bookingList